--- a/src/components/pages/MainPage/MainPage.scss
+++ b/src/components/pages/MainPage/MainPage.scss
@@ -12,6 +12,10 @@
   .main-page__wrapper {
     .main-page__inner {
       padding: 0 5px;
+
+      .news-list__wrapper {
+        margin-bottom: 150px;
+      }
     }
   }
 }
