--- a/src/components/organisms/Slider/Slider.scss
+++ b/src/components/organisms/Slider/Slider.scss
@@ -8,7 +8,6 @@
     .swiper-slide {
       max-width: 280px !important;
       width: 280px !important;
-
     }
 
 
@@ -70,6 +69,7 @@
     object-position: 50% 50%;
     border-radius: 10px;
     margin-bottom: 15px;
+    // margin: auto;
   }
 
 }
@@ -81,13 +81,16 @@
         max-width: 540px !important;
         width: 540px !important;
         border-radius: 10px;
+        display: flex;
 
         img {
           // width: 100%;
-          height: 100%;
+          // height: 100%;
           width: auto;
           border-radius: 10px;
           max-width: 540px;
+          margin-top: auto;
+          margin-bottom: auto;
         }
       }
     }
