--- a/src/components/pages/PostsPage/PostsPage.scss
+++ b/src/components/pages/PostsPage/PostsPage.scss
@@ -42,6 +42,10 @@
       margin-top: 40px;
       margin-bottom: 40px;
 
+      a {
+        border-bottom: 1px solid var(--main-color-hover);
+      }
+
       p {
         padding: 5px 0;
 
