--- a/src/components/pages/VPNPage/components/GeneralRating.scss
+++ b/src/components/pages/VPNPage/components/GeneralRating.scss
@@ -17,6 +17,10 @@
     font-size: 14px;
     line-height: 125%;
     color: var(--color-50);
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &-header {
