--- a/src/components/pages/RatingPage/RatingPage.scss
+++ b/src/components/pages/RatingPage/RatingPage.scss
@@ -20,6 +20,9 @@
 @media (min-width:1024px) {
   .rating-page {
     margin-bottom: 100px;
+    margin-right: 60px;
+    margin-left: 60px;
+    width: auto;
 
     .title {
       margin-bottom: 30px;
