--- a/src/components/organisms/Slider/Slider.scss
+++ b/src/components/organisms/Slider/Slider.scss
@@ -79,18 +79,22 @@
     .swiper {
       .swiper-slide {
         max-width: 540px !important;
-        width: 540px !important;
+        // width: 540px !important;
+        width: auto !important;
         border-radius: 10px;
         display: flex;
 
         img {
           // width: 100%;
           // height: 100%;
-          width: auto;
+          // width: auto;
           border-radius: 10px;
           max-width: 540px;
           margin-top: auto;
           margin-bottom: auto;
+
+          object-fit: contain;
+          height: inherit;
         }
       }
     }
@@ -120,7 +124,7 @@
       .swiper {
         .swiper-slide {
           max-width: 760px !important;
-          width: 760px !important;
+          // width: 760px !important;
 
           img {
             max-width: 760px;
