--- a/src/components/pages/AlternativeVPNPage/AlternativeVPNPage.scss
+++ b/src/components/pages/AlternativeVPNPage/AlternativeVPNPage.scss
@@ -34,6 +34,9 @@
 @media (min-width:1024px) {
   .alternative-page {
     margin-bottom: 100px;
+    margin-right: 60px;
+    margin-left: 60px;
+    width: auto;
 
     &__inner {
       padding: 0;
