--- a/src/components/pages/MainPage/MainPage.scss
+++ b/src/components/pages/MainPage/MainPage.scss
@@ -10,6 +10,10 @@
 
 @media (min-width:1024px) {
   .main-page__wrapper {
+    margin-right: 60px;
+    margin-left: 60px;
+    width: auto;
+
     .main-page__inner {
       padding: 0 5px;
 
