--- a/src/components/pages/VPNPage/VPNPage.scss
+++ b/src/components/pages/VPNPage/VPNPage.scss
@@ -192,7 +192,7 @@
 
           .button_vpn-link {
             height: min-content;
-            max-width: 285px;
+            // max-width: 285px;
             margin-right: 30px;
             margin-left: 0;
             margin-bottom: 0;
