--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -168,3 +168,10 @@ body {
     background-color: var(--color-45);
   }
 }
+
+.border-dashed {
+  display: block;
+  width: 100%;
+  height: 1px;
+  border-bottom: 1px dashed var(--color-45b)
+}
