--- a/src/components/pages/VPNPage/components/GeneralRating.scss
+++ b/src/components/pages/VPNPage/components/GeneralRating.scss
@@ -240,6 +240,7 @@
     .extended-description__text {
       font-size: 20px;
       margin-bottom: 40px;
+      line-height: 150%;
 
       p {
         padding: 10px 0;
