--- a/src/components/organisms/PostsList/PostsList.scss
+++ b/src/components/organisms/PostsList/PostsList.scss
@@ -87,6 +87,7 @@
               height: 116px;
               min-width: 156px;
               min-height: 116px;
+              margin-top: -26px;
 
             }
 
