updated vpn api

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -151,6 +151,11 @@ body {
   color: var(--color-negative);
 }
 
+.neutral-bad {
+  color: var(--color-neutral-bad);
+}
+
+
 .progress-line {
   width: 100%;
   border-radius: 4px;
