--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -33,8 +33,7 @@
   --color-positive: #07A821;
   --color-neutral: #C7A805;
   --color-negative: #DB0F0F;
-
-  // --font-sans: Roboto;
+  --color-neutral-bad: #db750f;
 
   // --color-red: #{$color-red};
   // --color-green: #{$color-green};
