--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -6,7 +6,8 @@
 
   --main-color-hover: #4B09D3;
   --second-color: #3C07A8;
-  --second-background-color: #F8F8F8;
+  --second-background-color: #fff;
+  --add-background-color: #F8F8F8;
 
   --button-colored-text: #FFFFFF;
   --button-background-color: #FFFFFF;
