--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -167,11 +167,14 @@ body {
 .progress-line {
   width: 100%;
   border-radius: 4px;
-  height: 10px;
-  background-color: #DADADA;
+  height: 12px;
+  background-color: #fff !important;
+  border: 1px solid var(--color-45);
   position: relative;
   margin-top: 5px;
   order: 3;
+  box-sizing: border-box;
+
 
   .filled {
     position: absolute;
@@ -187,4 +190,20 @@ body {
   width: 100%;
   height: 1px;
   border-bottom: 1px dashed var(--color-45b)
+}
+
+.list_elements {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: -10px;
+
+  .list_element {
+    background-color: var(--color-20);
+    border-radius: 35px;
+    padding: 5px 10px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+  }
 }
