--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -14,6 +14,7 @@
   --button-background-color-hover: #E5D9FF;
 
   --color-30: #925DFE;
+  --color-30b: #E9E9E9;
   --color-20: #E6E6E6;
   --color-40: #7634FE;
   --color-45: #5B0BFE;
@@ -21,6 +22,7 @@
   --color-60: #4B09D3;
   --color-50: #550CE9;
   --color-45b: #A6A2AD;
+  --color-70b: #383740;
   --color-100b: #141316;
   --desctop-width: 1330px;
 
