--- a/src/components/organisms/PostsList/PostsList.scss
+++ b/src/components/organisms/PostsList/PostsList.scss
@@ -23,6 +23,10 @@
 
           &:hover {
             cursor: pointer;
+
+            .news-item__title {
+              color: var(--main-color-hover);
+            }
           }
 
 
