--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -207,3 +207,11 @@ body {
     margin-bottom: 5px;
   }
 }
+
+.hidden {
+  display: none !important;
+}
+
+.wordBreak {
+  word-break: break-all;
+}
