--- a/src/components/organisms/TopPanel/TopPanel.scss
+++ b/src/components/organisms/TopPanel/TopPanel.scss
@@ -10,8 +10,6 @@
     padding: 15px 15px;
     margin: 0 auto;
 
-
-
     .logo-vpn {
       background-image: url('../../../images/vpn_logo.svg');
       background-size: contain;
@@ -27,25 +25,38 @@
         opacity: 0.8;
       }
     }
+
+    &:has(.search-open) {
+      padding-top: 8px;
+      padding-bottom: 8px;
+
+      .logo-vpn,
+      .mobile_menu__wrapper {
+        display: none;
+      }
+    }
   }
 }
 
 .mobile_menu__wrapper {
   display: block;
   width: 24px;
+}
 
-  .mobile_menu {
-    display: flex;
+.mobile_menu {
+  display: flex;
+
+  svg {
+    margin: auto;
+    stroke: var(--main-color)
+  }
+
+  &:hover {
+    cursor: pointer;
 
     svg {
-      margin: auto;
-      stroke: var(--main-color)
-    }
-
-    &:hover {
       stroke: var(--main-color-hover)
     }
-
   }
 }
 
@@ -55,9 +66,17 @@
 
     .top_panel__inner {
       padding: 10px 0 5px;
+      margin-right: 60px;
+      margin-left: 60px;
 
       .mobile_menu__wrapper {
-        display: none;
+        .mobile_menu {
+          display: none;
+        }
+
+        .navigator__wrapper {
+          display: none;
+        }
       }
 
       .logo-vpn {
@@ -65,8 +84,29 @@
         width: 141px;
 
       }
+
+      &:has(.search-open) {
+        padding-top: 7px;
+        padding-bottom: 6px;
+
+        .logo-vpn {
+          display: block;
+        }
+
+        .mobile_menu__wrapper {
+          display: flex;
+        }
+      }
     }
   }
 }
 
-@media (min-width:1440px) {}
+@media (min-width:1440px) {
+  .top_panel__wrapper {
+    .top_panel__inner {
+      max-width: var(--desctop-width);
+      margin-right: auto;
+      margin-left: auto;
+    }
+  }
+}
