--- a/src/components/pages/PostsPage/PostsPage.scss
+++ b/src/components/pages/PostsPage/PostsPage.scss
@@ -71,7 +71,46 @@
   }
 }
 
+.search__not-found {
+  padding: 20px 30px;
+  line-height: 150%;
+
+  &__text {
+    text-align: center;
+
+    margin-bottom: 30px;
+
+    p {
+      &:first-child {
+        margin-bottom: 30px;
+      }
+    }
+
+  }
+
+  &__go-main {
+    text-align: center;
+    color: var(--main-color-hover);
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.9;
+    }
+  }
+}
+
 @media (min-width:1024px) {
+  .search__not-found {
+    padding: 60px 100px;
+    font-size: 24px;
+
+    &__text {
+
+      text-align: center;
+
+    }
+  }
+
   .news-page {
     margin-bottom: 85px;
 
