--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -17,6 +17,7 @@
   --color-30b: #E9E9E9;
   --color-20: #E6E6E6;
   --color-40: #7634FE;
+  --color-40b: #BFBFBF;
   --color-45: #5B0BFE;
   --color-50b: #7F7A87;
   --color-60: #4B09D3;
