--- a/src/components/pages/VPNPage/components/GeneralRating.scss
+++ b/src/components/pages/VPNPage/components/GeneralRating.scss
@@ -286,6 +286,10 @@
         &-title,
         &-value {
           font-size: 18px;
+
+          .list_elements {
+            justify-content: end;
+          }
         }
       }
     }
