--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -46,9 +46,9 @@ center,
 dl,
 dt,
 dd,
-ol,
-ul,
-li,
+// ol,
+// ul,
+// li,
 fieldset,
 form,
 label,
@@ -106,10 +106,10 @@ section {
   display: block;
 }
 
-ol,
-ul {
-  list-style: none;
-}
+// ol,
+// ul {
+//   list-style: none;
+// }
 
 blockquote,
 q {
