--- a/src/components/organisms/PostsList/PostsList.scss
+++ b/src/components/organisms/PostsList/PostsList.scss
@@ -35,15 +35,26 @@
             height: 73px;
             min-width: 100px;
             min-height: 73px;
+
+            // width: 100%;
+            // padding-top: 65%;
+            position: relative;
+
             border-radius: 10px;
             overflow: hidden;
 
             img {
+              object-position: 50% 50%;
               width: 100%;
               height: 100%;
+              display: block;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
               object-fit: cover;
-              object-position: 50% 50%;
             }
+
           }
 
           &__content {
@@ -87,12 +98,11 @@
             padding-bottom: 50px;
 
             &__img {
-              width: 156px;
-              height: 116px;
-              min-width: 156px;
-              min-height: 116px;
+              width: 218px;
+              height: 120px;
+              min-width: 218px;
+              min-height: 120px;
               margin-top: -26px;
-
             }
 
 
