--- a/src/components/organisms/RedactionTop/RedactionTop.scss
+++ b/src/components/organisms/RedactionTop/RedactionTop.scss
@@ -53,7 +53,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    transition: all 2s ease-in-out .5s;
+    transition: position 2s ease-in-out .5s;
 
     &__title {
       margin-bottom: 30px;
