--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -44,6 +44,7 @@ body {
 
     .wrapper {
       min-height: 100vh;
+      height: 100%;
       display: flex;
       flex-direction: column;
     }
