--- a/src/components/organisms/Slider/Slider.scss
+++ b/src/components/organisms/Slider/Slider.scss
@@ -3,11 +3,12 @@
 
   .swiper {
     width: 100%;
-    height: 435px;
+    height: auto;
 
     .swiper-slide {
       max-width: 280px !important;
       width: 280px !important;
+      height: auto;
     }
 
 
@@ -29,7 +30,7 @@
 .banner {
   padding: 20px;
   width: fit-content;
-  height: 400px;
+  height: 100%;
 
   &__link-el {
     display: flex;
@@ -146,7 +147,7 @@
 
     .swiper {
       width: 100%;
-      height: 570px;
+      height: auto;
 
 
       .swiper-slide {
@@ -177,7 +178,7 @@
 
 
   .banner {
-    min-height: 540px;
+    min-height: 100%;
     height: auto;
     padding: 80px;
 
